--- a/components/footer/footer.html
+++ b/components/footer/footer.html
@@ -47,3 +47,13 @@
         </p>
     </div>
 </div>
+
+<script src="../../js/jquery.min.js"></script>
+<script src="../../js/jquery.copyrights.js"></script>
+<script>
+    $('#year').copyrights();
+    $('#developer').developer()
+
+    $('bivr-footer').load('components/footer/footer.html');
+    $('bivr-header').load('components/header/header.html');
+</script>
