Fixed the bug in header and footer components

--- a/components/footer/footer.html
+++ b/components/footer/footer.html
@@ -43,17 +43,11 @@
 <!---->
 <div class="copywrite">
     <div class="container">
-        <p> &copy; <span id="year"></span> BIVR-&alpha;. All rights reserved | Design by <span id="devloper"></span>
+        <p> &copy; <span id="year"></span> BIVR-&alpha;. All rights reserved | Design by <span id="developer"></span>
         </p>
     </div>
 </div>
-
-<script src="../../js/jquery.min.js"></script>
-<script src="../../js/jquery.copyrights.js"></script>
 <script>
     $('#year').copyrights();
     $('#developer').developer()
-
-    $('bivr-footer').load('components/footer/footer.html');
-    $('bivr-header').load('components/header/header.html');
 </script>
