--- a/components/header/header.html
+++ b/components/header/header.html
@@ -13,10 +13,8 @@
                 <ul class="nav1">
                     <li class="active"><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="reviews.html">Reviews</a></li>
-                    <li><a href="typo.html">News</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
-                    <li><a href="contact.html">Mail</a></li>
+                    <li><a href="contact.html">Contat</a></li>
                 </ul>
             </div>
             <!-- script-for-menu -->
