--- a/components/footer/footer.html
+++ b/components/footer/footer.html
@@ -2,37 +2,29 @@
 <div class="footer">
     <div class="container">
         <div class="footer-grids">
-            <div class="col-md-3 ftr-info">
-                <h3>About Us</h3>
-                <p>Sed faucibus mollis laoreet. Sed vehicula faucibus tristique lectus a orci molestie finibus.
-                    Suspendisse pharetra, metus sed rutrum pretium.</p>
+            <div class="col-md-4 ftr-info">
+                <h3>BIVR-&alpha;</h3>
+                <p>Boat Island VR (BIVR) is a virtual reality sandbox experience, it can be played on the Meta Quest
+                    platform. It is a for boats and our Islanders which is a virtual space where islanders can visit,
+                    connect with each other and enjoy exclusive contents and entertainment from different boats around
+                    the world.
+                </p>
             </div>
-            <div class="col-md-3 ftr-grid">
-                <h3>Categories</h3>
-                <ul class="ftr-list">
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Racing</a></li>
-                    <li><a href="#">Adventure</a></li>
-                    <li><a href="#">Simulation</a></li>
-                    <li><a href="#">Bike</a></li>
-                </ul>
-            </div>
-            <div class="col-md-3 ftr-grid">
+            <div class="col-md-4 ftr-grid">
                 <h3>Platform</h3>
                 <ul class="ftr-list">
-                    <li><a href="#">Pc</a></li>
-                    <li><a href="#">Ps4</a></li>
-                    <li><a href="#">XBOX 360</a></li>
+                    <li><a href="#">Meta-Verse</a></li>
+                    <li><a href="#">Android OS</a></li>
+                    <!-- <li><a href="#">XBOX 360</a></li>
                     <li><a href="#">XBOX ONE</a></li>
-                    <li><a href="#">PSP</a></li>
+                    <li><a href="#">PSP</a></li> -->
                 </ul>
             </div>
-            <div class="col-md-3 ftr-grid">
+            <div class="col-md-4 ftr-grid">
                 <h3>Information</h3>
                 <ul class="ftr-list">
                     <li><a href="#">Contact Us</a></li>
-                    <li><a href="#">Wish Lists</a></li>
-                    <li><a href="#">Site Map</a></li>
+                    <li><a href="#">Purchase Ticket</a></li>
                     <li><a href="#">Terms & Conditions</a></li>
                 </ul>
             </div>
@@ -43,7 +35,7 @@
 <!---->
 <div class="copywrite">
     <div class="container">
-        <p> &copy; <span id="year"></span> BIVR-&alpha;. All rights reserved | Design by <span id="developer"></span>
+        <p> &copy; <span id="year"></span> <a href="https://bivr.io" style="color:#545cac">BIVR-&alpha;</a>. All rights reserved | Design by <span id="developer"></span>
         </p>
     </div>
 </div>
