--- a/components/header/header.html
+++ b/components/header/header.html
@@ -14,7 +14,7 @@
                     <li class="active"><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
-                    <li><a href="contact.html">Contat</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
             <!-- script-for-menu -->
