Updated header and home page content

--- a/components/header/header.html
+++ b/components/header/header.html
@@ -4,8 +4,7 @@
         <div class="container">
             <div class="logo">
                 <h1>
-                    <img src="images/logo.jpeg" alt="bivr-alpah-logo" height="45px">
-                    <a href="index.html">BIVR-&alpha;</a>
+                    <a href="index.html"> <img src="images/logo.jpeg" alt="bivr-alpah-logo" height="45px"> BIVR-&alpha;</a>
                 </h1>
             </div>
             <div class="top-menu">
