Updated About page

--- a/components/footer/footer.html
+++ b/components/footer/footer.html
@@ -35,7 +35,7 @@
 <!---->
 <div class="copywrite">
     <div class="container">
-        <p> &copy; <span id="year"></span> <a href="https://bivr.io" style="color:#545cac">BIVR-&alpha;</a>. All rights reserved | Design by <span id="developer"></span>
+        <p> &copy; <span id="year"></span> <a href="https://bivr.io" style="color:#69d2e8">BIVR-&alpha;</a>. All rights reserved | Design by <span id="developer"></span>
         </p>
     </div>
 </div>
