Added some new screenshots

--- a/css/style.css
+++ b/css/style.css
@@ -229,19 +229,19 @@ span.menu {
 
 /*--- slider-css --*/
 .banner1 {
-  background: url(../images/bnr1.jpg) no-repeat 0px 0px;
+  background: url(../images/bnr3.png) no-repeat 0px 0px;
   background-size: cover;
   min-height: 680px;
 }
 
 .banner2 {
-  background: url(../images/bnr2.jpg) no-repeat 0px 0px;
+  background: url(../images/bnr3.png) no-repeat 0px 0px;
   background-size: cover;
   min-height: 680px;
 }
 
 .banner3 {
-  background: url(../images/bnr3.jpg) no-repeat 0px 0px;
+  background: url(../images/bnr3.png) no-repeat 0px 0px;
   background-size: cover;
   min-height: 680px;
 }
