--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 h4,
 h5,
 h6,
@@ -229,7 +228,7 @@ span.menu {
 
 /*--- slider-css --*/
 .banner1 {
-  background: url(../images/bnr3.png) no-repeat 0px 0px;
+  background: url(../images/bnr1.jpg) no-repeat 0px 0px;
   background-size: cover;
   min-height: 680px;
 }
@@ -278,7 +277,8 @@ span.menu {
   width: 100%;
   margin-top: 16em;
 }
-.caption a{
+
+.caption a {
   margin: 20px;
   border-radius: 30px;
 }
@@ -632,9 +632,10 @@ ul.callbacks_tabs.callbacks1_tabs {
 }
 
 .poster {
-  background: url(../images/pst1.jpg) no-repeat 0px 0px;
-  background-size: cover;
+  background: url(../images/pst1.png) no-repeat 1020px 0px;
+  /* background-size: cover; */
   position: relative;
+  background-color: #13254d;
 }
 
 .poster-info {
@@ -1632,7 +1633,6 @@ h3.ghj {
   .poster-info {
     width: 76%;
   }
-
   .x-box-left h2 {
     font-size: 3.2em;
   }
@@ -2146,6 +2146,12 @@ h3.ghj {
 
   .latest {
     padding-bottom: 3em;
+  }
+
+  .poster {
+    background: url(../images/pst1.png) no-repeat 520px 0px;
+    position: relative;
+    background-color: #13254d;
   }
 
   .poster-info h3 {
