--- a/assets/css/style-starter.css
+++ b/assets/css/style-starter.css
@@ -1,7 +1,3 @@
-/* 
-Author: W3layouts
-Author URL: http://w3layouts.com
- */
 @charset "UTF-8";
 /*!
  *  Font Awesome 4.7.0 by @davegandy - http://fontawesome.io - @fontawesome
@@ -2339,7 +2335,7 @@ Author URL: http://w3layouts.com
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
-  --primary: #dc4f72;
+  --primary: #ab07d4;
   --secondary: #0d5fa8;
   --success: #28a745;
   --info: #17a2b8;
@@ -2453,7 +2449,7 @@ sup {
   top: -.5em; }
 
 a {
-  color: #dc4f72;
+  color: #ab07d4;
   text-decoration: none;
   background-color: transparent; }
   a:hover {
@@ -4142,8 +4138,8 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #dc4f72;
-  border-color: #dc4f72; }
+  background-color: #ab07d4;
+  border-color: #ab07d4; }
   .btn-primary:hover {
     color: #fff;
     background-color: #d62f58;
@@ -4155,8 +4151,8 @@ fieldset:disabled a.btn {
     box-shadow: 0 0 0 0.2rem rgba(225, 105, 135, 0.5); }
   .btn-primary.disabled, .btn-primary:disabled {
     color: #fff;
-    background-color: #dc4f72;
-    border-color: #dc4f72; }
+    background-color: #ab07d4;
+    border-color: #ab07d4; }
   .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
   .show > .btn-primary.dropdown-toggle {
     color: #fff;
@@ -4349,22 +4345,22 @@ fieldset:disabled a.btn {
       box-shadow: 0 0 0 0.2rem rgba(82, 88, 93, 0.5); }
 
 .btn-outline-primary {
-  color: #dc4f72;
-  border-color: #dc4f72; }
+  color: #ab07d4;
+  border-color: #ab07d4; }
   .btn-outline-primary:hover {
     color: #fff;
-    background-color: #dc4f72;
-    border-color: #dc4f72; }
+    background-color: #ab07d4;
+    border-color: #ab07d4; }
   .btn-outline-primary:focus, .btn-outline-primary.focus {
     box-shadow: 0 0 0 0.2rem rgba(220, 79, 114, 0.5); }
   .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-    color: #dc4f72;
+    color: #ab07d4;
     background-color: transparent; }
   .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active,
   .show > .btn-outline-primary.dropdown-toggle {
     color: #fff;
-    background-color: #dc4f72;
-    border-color: #dc4f72; }
+    background-color: #ab07d4;
+    border-color: #ab07d4; }
     .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus,
     .show > .btn-outline-primary.dropdown-toggle:focus {
       box-shadow: 0 0 0 0.2rem rgba(220, 79, 114, 0.5); }
@@ -4518,7 +4514,7 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #dc4f72;
+  color: #ab07d4;
   text-decoration: none; }
   .btn-link:hover {
     color: #ba254a;
@@ -4753,7 +4749,7 @@ input[type="button"].btn-block {
   .dropdown-item.active, .dropdown-item:active {
     color: #fff;
     text-decoration: none;
-    background-color: #dc4f72; }
+    background-color: #ab07d4; }
   .dropdown-item.disabled, .dropdown-item:disabled {
     color: #6c757d;
     pointer-events: none;
@@ -5029,8 +5025,8 @@ input[type="button"].btn-block {
   opacity: 0; }
   .custom-control-input:checked ~ .custom-control-label::before {
     color: #fff;
-    border-color: #dc4f72;
-    background-color: #dc4f72; }
+    border-color: #ab07d4;
+    background-color: #ab07d4; }
   .custom-control-input:focus ~ .custom-control-label::before {
     box-shadow: 0 0 0 0.2rem rgba(220, 79, 114, 0.25); }
   .custom-control-input:focus:not(:checked) ~ .custom-control-label::before {
@@ -5076,8 +5072,8 @@ input[type="button"].btn-block {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26l2.974 2.99L8 2.193z'/%3e%3c/svg%3e"); }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
-  border-color: #dc4f72;
-  background-color: #dc4f72; }
+  border-color: #ab07d4;
+  background-color: #ab07d4; }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3e%3cpath stroke='%23fff' d='M0 2h4'/%3e%3c/svg%3e"); }
@@ -5248,7 +5244,7 @@ input[type="button"].btn-block {
     width: 1rem;
     height: 1rem;
     margin-top: -0.25rem;
-    background-color: #dc4f72;
+    background-color: #ab07d4;
     border: 0;
     border-radius: 1rem;
     transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -5270,7 +5266,7 @@ input[type="button"].btn-block {
   .custom-range::-moz-range-thumb {
     width: 1rem;
     height: 1rem;
-    background-color: #dc4f72;
+    background-color: #ab07d4;
     border: 0;
     border-radius: 1rem;
     transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -5295,7 +5291,7 @@ input[type="button"].btn-block {
     margin-top: 0;
     margin-right: 0.2rem;
     margin-left: 0.2rem;
-    background-color: #dc4f72;
+    background-color: #ab07d4;
     border: 0;
     border-radius: 1rem;
     transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -5388,7 +5384,7 @@ input[type="button"].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #dc4f72; }
+  background-color: #ab07d4; }
 
 .nav-fill .nav-item {
   flex: 1 1 auto;
@@ -5870,7 +5866,7 @@ input[type="button"].btn-block {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #dc4f72;
+  color: #ab07d4;
   background-color: #fff;
   border: 1px solid #dee2e6; }
   .page-link:hover {
@@ -5896,8 +5892,8 @@ input[type="button"].btn-block {
 .page-item.active .page-link {
   z-index: 3;
   color: #fff;
-  background-color: #dc4f72;
-  border-color: #dc4f72; }
+  background-color: #ab07d4;
+  border-color: #ab07d4; }
 
 .page-item.disabled .page-link {
   color: #6c757d;
@@ -5962,7 +5958,7 @@ input[type="button"].btn-block {
 
 .badge-primary {
   color: #fff;
-  background-color: #dc4f72; }
+  background-color: #ab07d4; }
   a.badge-primary:hover, a.badge-primary:focus {
     color: #fff;
     background-color: #cf2952; }
@@ -6176,7 +6172,7 @@ input[type="button"].btn-block {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #dc4f72;
+  background-color: #ab07d4;
   transition: width 0.6s ease; }
   @media (prefers-reduced-motion: reduce) {
     .progress-bar {
@@ -6239,8 +6235,8 @@ input[type="button"].btn-block {
   .list-group-item.active {
     z-index: 2;
     color: #fff;
-    background-color: #dc4f72;
-    border-color: #dc4f72; }
+    background-color: #ab07d4;
+    border-color: #ab07d4; }
   .list-group-item + .list-group-item {
     border-top-width: 0; }
     .list-group-item + .list-group-item.active {
@@ -7073,7 +7069,7 @@ a.close.disabled {
   vertical-align: text-top !important; }
 
 .bg-primary {
-  background-color: #dc4f72 !important; }
+  background-color: #ab07d4 !important; }
 
 a.bg-primary:hover, a.bg-primary:focus,
 button.bg-primary:hover,
@@ -7173,7 +7169,7 @@ button.bg-dark:focus {
   border-left: 0 !important; }
 
 .border-primary {
-  border-color: #dc4f72 !important; }
+  border-color: #ab07d4 !important; }
 
 .border-secondary {
   border-color: #0d5fa8 !important; }
@@ -9414,7 +9410,7 @@ button.bg-dark:focus {
   color: #fff !important; }
 
 .text-primary {
-  color: #dc4f72 !important; }
+  color: #ab07d4 !important; }
 
 a.text-primary:hover, a.text-primary:focus {
   color: #ba254a !important; }
@@ -9555,7 +9551,7 @@ a.text-dark:hover, a.text-dark:focus {
     border-color: #dee2e6; } }
 
 :root {
-  --primary: #dc4f72;
+  --primary: #ab07d4;
   --secondary: #0d5fa8;
   --title-color: #2C3038;
   --text-color: #5a5a5a;
@@ -9874,13 +9870,14 @@ button.navbar-toggler.collapsed .icon-expand {
   color: var(--secondary-color); }
 
 header {
-  background-color: #fff;
+  /* background-color: #fff; */
   padding: 0px;
   transition: all 0.4s ease 0s;
   height: 90px;
   display: grid;
   align-items: center;
-  box-shadow: 0 3px 9px rgba(0, 0, 0, 0.05); }
+  /* box-shadow: 0 3px 9px rgba(0, 0, 0, 0.05);  */
+}
 
 .navbar {
   padding: 0; }
@@ -10165,12 +10162,12 @@ nav ul li a:hover {
 
 .w3l-index1 {
   margin-top: 90px; }
-  .w3l-index1 .content {
+  .w3l-index1 .content, .bnr{
     position: relative;
     z-index: 1;
     overflow: hidden;
     background: #ffffff;
-    background-image: linear-gradient(to right, #fff, rgba(255, 255, 255, 0.92)), url(../images/banner.jpg);
+    background-image: url(../images/bg-cover.png);
     background-repeat: no-repeat, no-repeat, no-repeat;
     background-position: center;
     background-attachment: fixed;
@@ -10178,8 +10175,6 @@ nav ul li a:hover {
     display: grid;
     align-items: center;
     padding-top: 5rem; }
-  .w3l-index1 .content-photo img {
-    transform: rotate(180deg); }
   .w3l-index1 .content-left h3 {
     font-size: 50px;
     line-height: 57.5px;
