IMAGE Enhance Optimized picture quality for about page and landing page

--- a/assets/css/style-starter.css
+++ b/assets/css/style-starter.css
@@ -10901,6 +10901,7 @@ h2.resp-accordion:first-child {
  * Copyright 2013-2018 David Deutsch
  * Licensed under: SEE LICENSE IN https://github.com/OwlCarousel2/OwlCarousel2/blob/master/LICENSE
  */
+ .owl-theme .item{margin: 10px}
 .owl-carousel,
 .owl-carousel .owl-item {
   -webkit-tap-highlight-color: transparent;
