Update Social Links and Designed Event view page -  Updated social media icons and links in all pages

--- a/assets/css/style-starter.css
+++ b/assets/css/style-starter.css
@@ -3084,7 +3084,9 @@ footer a, footer h3{
 *::after {
   box-sizing: border-box;
 }
-
+.ml{
+  margin: 5px;
+}
 html {
   font-family: sans-serif;
   line-height: 1.15;
