Undo changed from the last 3 commits

--- a/assets/css/style-starter.css
+++ b/assets/css/style-starter.css
@@ -14762,7 +14762,7 @@ nav ul li a:hover {
   header {
     height: auto;
     padding: 15px 0;
-    /* background-color: #dfc8e9; */
+    background-color: #e1c8ec;
   }
 
   .navbar-expand-lg .navbar-nav .dropdown-menu {
