--- a/assets/css/style-starter.css
+++ b/assets/css/style-starter.css
@@ -17972,7 +17972,7 @@ div#small-dialog iframe {
   height:25px;
   filter: invert(1);
 }
-.time{
+/* .time{
   position: fixed;
   width: 70%;
   right: 15%;
@@ -17984,5 +17984,5 @@ div#small-dialog iframe {
   color: var(--white);
   opacity: .8;
   box-shadow: 0 2px 2px var(--dark);
-}
+} */
 /*# sourceMappingURL=style-starter.css.map */
